feat: add dated company debt payments